fix(@clayui/css): Remove white-space: nowrap on dropdown-menu-width-shrink

--- a/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
@@ -664,7 +664,6 @@ $cadmin-dropdown-menu-width-shrink: () !default;
 $cadmin-dropdown-menu-width-shrink: map-deep-merge(
 	(
 		min-width: 0,
-		white-space: nowrap,
 	),
 	$cadmin-dropdown-menu-width-shrink
 );
